prevent console overflowing page

--- a/src/scss/components/console.scss
+++ b/src/scss/components/console.scss
@@ -4,6 +4,7 @@
     flex: 1;
     padding-left: 15px;
     padding-right: 15px;
+    max-width: 100%;
 
     .card {
 	display: flex;
